[package]
name = "gambit_macro"
version = "0.1.0"
authors = ["Nestor Demeure <nestor@nestor-HP-ProBook-650-G1>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies.syn]
version = "0.15.36"
features = ["full"]

[dependencies]
gambit = { path = "../gambit" }
quote = "0.6.12"
proc-macro2 = "0.4.30"